# SeisCore

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  setupC.py
SeisCore/: __init__.py
SeisCore/BinaryFile/: BinaryFile.py  SigmaBinary.py
SeisCore/Drafts/: BinFileTest.py  CompareFiles.py  FileChanger.py  JoinFiles.py  SigmaBinaryFileTest.py  agbdsvfuwy.py  bin_test.py  detrend_data.py  kepster_spectrum.py  r.py  segy_reader.py  sigma_read.py  sl_filter.py  sp.py  spectrogram.py  stream_average_spectrum.py
SeisCore/Functions/: Energy.py  Filter.py  NormingSignal.py  Spectrogram.py  Spectrum.py  Wavelet.py
SeisCore/GeneralCalcFunctions/: AverSpectrum.py  BandPassFilter.py  CheckingName.py  EnergyCalc.py  FindFilePath.py  MarmettFilter.py  NormingSignal.py  Spectrogram.py  Spectrum.py
SeisCore/GeneralFunction/: CheckingName.py  FindFilePath.py  GeneralFunctions.py  cmdLogging.py
SeisCore/GeneralPlottingFunctions/: Plotting.py  Spectrogram.py  histogram.py
SeisCore/Plotting/: Plotting.py
SeisCore/SEGY/: Reader.py
SeisCore/VisualFunctions/: Colors.py
SeisCore/_Draft/: BeautifulSpectrums.py  avgspectrum_pack.py  filtration.py  opt.py  qqqq.py  qqqqswqsqsw.py  qwqwqw.py  reading_bin_file.py  sandbox.py  sp.py  test1.py  testBandPassFilter.py  testCheckingName.py  testCorrelationCalculation.py  testDataIntervals.py  testMinimizationPrepear.py  testNumba.py  testQuantile.py  warsddfghj.py
SeisCore/tests/: BeautifulSpectrums.py  avgspectrum_pack.py  opt.py  qqqq.py  (+21 more)
seiscore/: __init__.py
(+141 files in other folders)
