[tool.poetry]
name = "seiscore"
version = "0.1.0"
description = ""
authors = ["Michael <mihail.tchernov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.12"
numpy = "1.22.0"
pywavelets = "1.1.1"
matplotlib = "3.4.2"
scipy = "1.6.3"
cython = "^0.29.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
