[tool.poetry]
name = "seiscore"
version = "1.0.1"
description = ""
authors = ["Michael <mihail.tchernov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.12"
numpy = "1.22.0"
pywavelets = "1.1.1"
matplotlib = "3.4.2"
scipy = "1.10.0"
cython = "^0.29.34"
pytest = "^7.3.1"
pyhamcrest = "^2.0.4"
mock-open = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
